--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
 
 body{
     overflow-x: hidden;
+    font-family: 'Nerko One', cursive;
 }
