--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta&display=swap');
 
 body{
-    overflow-x: hidden;
-    font-family: 'Nerko One', cursive;
+    font-family: 'Mukta', sans-serif;
 }
